[tool.poetry]
name = "LayoutTransformer"
version = "0.1.0"
description = "A pytorch implementation of LayoutTransformer"
authors = ["zheduan.yin <github@filosfino.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
jupyterlab = "^3.0.7"
pandas = "^1.2.1"
matplotlib = "^3.3.4"
pillow = "^8.1.0"
scipy = "^1.6.0"
numpy = "^1.20.1"
torch = "^1.7.1"
torchvision = "^0.8.2"
seaborn = "^0.11.1"
dataclasses-json = "^0.5.2"
scikit-learn = "^0.24.1"
pycocotools = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
